Refactor and streamline personnel generation logic
Refactored personnel generation and procreation processes, ensuring proper handling of skills, loyalty, and education based on age. Enhanced marriage and procreation logic to include additional parameters and detailed checks. Updated unit tests to reflect these changes.